--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: [B S R V Prasad]
-description: [Assistant Professor (Sr.), Dept. of Mathematics, Vellore Institute of Technology, Vellore]
+description: [Assistant Professor (Sr.)<br> Dept. of Mathematics, Vellore Institute of Technology, Vellore]
 theme: jekyll-theme-architect
