--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: B S R V Prasad
 description: Assistant Professor (Sr.) <br> Dept. of Mathematics <br> Vellore Institute of Technology - Vellore <br> India.
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
