--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: B S R V Prasad
-description: Assistant Professor (Sr.), &nbsp; Department of Mathematics, <br> School of Advanced Sciences, &nbsp; Vellore Institute of Technology - Vellore &nbsp; India.
+description: Assocaite Professor (Grade - I), &nbsp; Department of Mathematics, <br> School of Advanced Sciences, &nbsp; Vellore Institute of Technology - Vellore &nbsp; India.
 theme: jekyll-theme-cayman
